WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310144
[JSC] for-using statement should not dispose on continue
https://bugs.webkit.org/show_bug.cgi?id=310144
Summary
[JSC] for-using statement should not dispose on continue
Sosuke Suzuki
Reported
2026-03-17 16:24:38 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-17 16:25:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60818
EWS
Comment 2
2026-03-19 18:34:24 PDT
Committed
309590@main
(6c959cf9637e): <
https://commits.webkit.org/309590@main
> Reviewed commits have been landed. Closing PR #60818 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-19 18:35:11 PDT
<
rdar://problem/172964732
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug